WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
93148
CSS 2.1 failure: overflow-applies-to-001 fails
https://bugs.webkit.org/show_bug.cgi?id=93148
Summary
CSS 2.1 failure: overflow-applies-to-001 fails
Robert Hogan
Reported
2012-08-03 11:44:20 PDT
.
Attachments
Patch
(108.20 KB, patch)
2012-08-03 12:47 PDT
,
Robert Hogan
eric
: review+
buildbot
: commit-queue-
Details
Formatted Diff
Diff
Archive of layout-test-results from apple-mac-5
(472.02 KB, application/zip)
2012-08-03 17:59 PDT
,
Build Bot
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Robert Hogan
Comment 1
2012-08-03 12:47:56 PDT
Created
attachment 156438
[details]
Patch
Eric Seidel (no email)
Comment 2
2012-08-03 13:57:09 PDT
Comment on
attachment 156438
[details]
Patch Woh, crazy.
Build Bot
Comment 3
2012-08-03 17:59:05 PDT
Comment on
attachment 156438
[details]
Patch
Attachment 156438
[details]
did not pass mac-ews (mac): Output:
http://queues.webkit.org/results/13437072
New failing tests: fast/css/nested-layers-with-hover.html tables/mozilla_expected_failures/marvin/table_overflow_hidden_tr.html tables/mozilla_expected_failures/marvin/table_overflow_hidden_tbody.html
Build Bot
Comment 4
2012-08-03 17:59:07 PDT
Created
attachment 156492
[details]
Archive of layout-test-results from apple-mac-5 The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: apple-mac-5 Port: <class 'webkitpy.common.config.ports.MacPort'> Platform: Mac OS X 10.7.4
Robert Hogan
Comment 5
2012-08-04 03:00:34 PDT
Committed
r124697
: <
http://trac.webkit.org/changeset/124697
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug